# protostar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  NOTICE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: datasets.toml  osc.example.toml  osc.toml
config/manifests/: Gessulat2019.json  Wilhelm2021.json  Zolg2017.json
docs/: additive_progenitor_likelihood.md  constellation_contributions.md  l1_l2_theory.md  manuscript_roadmap.md  maxquant_reader_brief.md  model_specification.md  osc_runbook.md  references.bib
pipelines/: 00_fetch_raw.py  05_peptide_reference.py  10_build_mzpeak.py  10_convert_raw.py  15_reference_library.py  20_build_metadata.py  30_extract_intermediates.py  _common.py  probe_search_format.py
pipelines/experiments/: .gitkeep  02_ms2_multinomial.py  30_extract_calibrant_ms2.py
pipelines/slurm/: convert.sbatch
protostar/: __init__.py
protostar/convert/: __init__.py  driver.py
protostar/experiments/: __init__.py  consensus_assembly.py  ms2_extract.py  scans.py
protostar/fetch/: __init__.py  manifest.py  net.py  pride.py  seed.py
protostar/intermediates/: __init__.py
protostar/metadata/: __init__.py  driver.py
protostar/peptides/: __init__.py  procal.py  reference.py  sources.py
protostar/peptides/data/: procal.parquet
results/: 01_chromatogram_shape.md  01_ms2_spectral_scoring.md  02_ms1_intensity_model.md  02_ms2_multinomial.md  03_intensity_and_ion_count.md  03_mz_error_model.md  04_charge_and_alpha.md  04_procal_calibration.md  05_counter_validation.md  05_resolution_and_transient.md  06_chromatogram_shape.md  07_procal_calibration.md  08_counter.md  README.md
tests/: conftest.py  test_convert_driver.py  test_experiments_consensus_assembly.py  test_experiments_ms2_extract.py  test_experiments_scans.py  test_manifest.py  test_metadata_driver.py  test_net.py  test_peptides.py  test_pride.py  test_procal.py  test_seed.py  test_zenodo.py
